# Investment-Agent

./: .env.example  .gitignore  README.md
config/prompts/v1/: market_overview.md
config/prompts/v2/: market_overview.md  market_overview_weekend.md  research_agent.md  thesis_check.md  thesis_check_weekend.md
config/tasks/: investment_thesis_check.yaml.example  investment_thesis_check_weekend.yaml.example  market_overview.yaml  market_overview_weekend.yaml
dashboard/: package-lock.json
dashboard/src/: App.tsx  index.css  types.ts
dashboard/src/api/: client.ts
dashboard/src/components/: Layout.tsx  PositionCard.tsx  PositionForm.tsx  RunRow.tsx  StatusBadge.tsx  TaskTriggerButton.tsx
dashboard/src/components/research/: ChatInput.tsx  ChatMessage.tsx  ChatWindow.tsx  ConversationList.tsx  (+3 more)
dashboard/src/pages/: PositionsPage.tsx  ResearchPage.tsx  RunDetailPage.tsx  RunsPage.tsx
engine/: =1.12.0  =6.0.10  pyproject.toml
engine/src/analyst/: __init__.py  __main__.py  cli.py  executor.py  scheduler.py
engine/src/analyst/analysis/: base.py  market_overview.py  thesis_check.py
engine/src/analyst/api/: __init__.py  app.py  deps.py  models.py
engine/src/analyst/api/routes/: positions.py  research.py  runs.py  tasks.py
engine/src/analyst/core/: cache.py  config.py  exceptions.py  types.py
engine/src/analyst/data/: aggregator.py  base.py  news_source.py  yfinance_source.py
engine/src/analyst/llm/: client.py  prompts.py
engine/src/analyst/output/: base.py  telegram.py
engine/src/analyst/research/: __init__.py  agent.py  db.py  tools.py  types.py
